tests/rosetta/out/Fortran/averages-pythagorean-means.error
gfortran: exit status 1
/tmp/averages-pythagorean-means.f90:57:5:

   57 |     n = 1
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/averages-pythagorean-means.f90:43:11:

   43 |       if ((powf(mid,n) > x)) then
      |           1
Error: Type mismatch in argument ‘base’ at (1); passed INTEGER(4) to REAL(4)
/tmp/averages-pythagorean-means.f90:73:37:

   73 |     write(s3,'(G0)') (((a >= g) .and. g) >= h)
      |                                     1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
